Fix about-me__img z-index

--- a/css/style.scss
+++ b/css/style.scss
@@ -484,16 +484,34 @@ header {
 /* About Section */
 
 .about-me {
-    max-width: 1000px;
+    position: relative;
+    padding-bottom: 10em;
+    width: 100%;
+}
+
+.about-me__content {
+    position: relative;
     margin: 0 auto;
+    max-width: 1000px;
 }
 
 .about-me__img {
     box-shadow: var(--bs);
 }
 
+.about-me::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 5em;
+    background: var(--clr-dark);
+    clip-path: polygon(50% 50%, 100% 0, 100% 100%, 0 100%, 0 0);
+}
+
 @media (min-width: 600px) {
-    .about-me {
+    .about-me__content {
         display: grid;
         grid-template-columns: 1fr 200px;
         grid-template-areas:
@@ -520,7 +538,6 @@ header {
     .about-me__img {
         grid-area: img;
         position: relative;
-        z-index: 2;
     }
 }
 
@@ -531,18 +548,6 @@ header {
     background-color: var(--clr-dark);
     color: var(--clr-light);
     text-align: center;
-    padding-top: 10em;
-}
-
-.my-work::before {
-    content: "";
-    position: absolute;
-    left: 0;
-    top: -1px;
-    width: 100%;
-    height: 5em;
-    background: var(--clr-light);
-    clip-path: polygon(100% 0, 50% 100%, 0 0);
 }
 
 /* .my-work::after {
@@ -639,6 +644,7 @@ header {
     bottom: 20px;
     right: 20px;
     visibility: hidden;
+    z-index: 1;
 }
 
 .top-button--show {
